...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/camera_preview_description"
        android:importantForAccessibility="yes"
        app:layout_constraintBottom_toTopOf="@+id/controlPanel"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:background="@color/control_panel_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ToggleButton
            android:id="@+id/toggleCameraVisualization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Hide Camera"
            android:textOff="Show Camera"
            android:contentDescription="@string/toggle_camera_description"
            android:importantForAccessibility="yes"
            android:layout_marginEnd="16dp"
            android:background="@drawable/toggle_button_background" />

        <Button
            android:id="@+id/btnRotateCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rotate 90°"
            android:contentDescription="@string/rotate_camera_description"
            android:importantForAccessibility="yes"
            android:background="@drawable/button_background"
...
